<resources>
    <string name="app_name">RIO</string>
    <string name="a">AVENGERS</string>
    <string name="b">Enter Email ID</string>
    <string name="c">LOGIN</string>
    <string name="d">Enter Password</string>
    <string name="e">Logged in as </string>
    <string name="f">Create Account</string>
    <string name="g">Already have an account? Login</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="preference_file_name">Avengers Preferences</string>

    <string name="hello_blank_fragment">Welcome to GBN Avengers</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="status">Status</string>
    <string name="logout">Logout</string>
    <string name="enter_user_name_here">Enter User Name here</string>
    <string name="enter_email_id_here">Enter Email Id here</string>
    <string name="enter_password_here">Enter Password here</string>
    <string name="confirm_password_here">Confirm Password here</string>
    <string name="register">Register</string>
    <string name="statustime">time</string>
    <string name="statusstate">state</string>
    <string name="entrmsg">Enter Message</string>
    <string name="user_name">Loading....</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">UPDATE</string>
    <string name="username">User Name</string>
    <string name="phone">Phone</string>
    <string name="sample_name">Sample Name</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="view">view</string>
    <string name="clear_chat">clear chat</string>
    <string name="block">block</string>
</resources>