<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stack"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_weight="2"
            android:src="@drawable/rakesh" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <TextView
                android:id="@+id/names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/statustime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/names"
                android:layout_margin="20dp"
                android:text="@string/statustime"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/statusstate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/statustime"
                android:layout_margin="20dp"
                android:text="@string/statusstate"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>