<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfile">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/tony"
        app:civ_border_color="@color/black"
        app:civ_border_width="3dp" />

    <TextView
        android:id="@+id/u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/username"
        android:textSize="24sp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/a"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_toEndOf="@id/u"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:autofillHints="username"
        android:layout_toRightOf="@id/u" />
    <TextView
        android:id="@+id/p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/phone"
        android:textSize="24sp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a"
        android:layout_centerInParent="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/p"
        android:layout_toRightOf="@id/p"
        android:autofillHints="username"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#B8B6AD"
        android:text="@string/update"
        android:layout_below="@id/phone"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>